# ec2hx

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  justfile  languages.toml
src/: fmt.rs  lib.rs  main.rs  parse.rs  supported_langs.txt
src/snapshots/: ec2hx__conf@angular.snap  ec2hx__conf@cockroach.snap  ec2hx__conf@discourse.snap  ec2hx__conf@django.snap  ec2hx__conf@elastic.snap  ec2hx__conf@emberjs.snap  ec2hx__conf@glob_inheritance.snap  ec2hx__conf@homebrew.snap  ec2hx__conf@htop.snap  ec2hx__conf@learngitbranching.snap  ec2hx__conf@linux.snap  ec2hx__conf@nodejs.snap  ec2hx__conf@pandoc.snap  ec2hx__conf@php.snap  ec2hx__conf@python.snap  ec2hx__conf@qemu.snap  ec2hx__conf@react.snap  ec2hx__conf@rust.snap  ec2hx__conf@sparse_indent_config.snap  ec2hx__conf@tab_width.snap  ec2hx__conf@trim_trailing_whitespace.snap  ec2hx__conf@typescript.snap  ec2hx__conf@unset.snap  ec2hx__conf@vscode.snap  ec2hx__conf@webpack.snap  ec2hx__conf@wordpress.snap  ec2hx__conf@zsh.snap  ec2hx__lang.snap  ec2hx__lang@angular.snap  ec2hx__lang@cockroach.snap  ec2hx__lang@discourse.snap  ec2hx__lang@django.snap  ec2hx__lang@elastic.snap  ec2hx__lang@emberjs.snap  ec2hx__lang@glob_inheritance.snap  ec2hx__lang@homebrew.snap  ec2hx__lang@htop.snap  ec2hx__lang@learngitbranching.snap  ec2hx__lang@linux.snap  ec2hx__lang@nodejs.snap  (+17 more)
test_data/: glob_inheritance  sparse_indent_config  tab_width  unset
