[package]
name = "ec2hx"
version = "1.1.0"
edition = "2021"
authors = ["Remo Senekowitsch <remo@buenzli.dev>"]
description = "convert EditorConfig to Helix configuration"
readme = "README.md"
repository = "https://github.com/senekor/ec2hx"
license = "Unlicense"
categories = ["command-line-utilities"]

# don't publish unnecessary files to crates.io
exclude = [".github", "test_data", "src/snapshots"]

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.42.0", features = ["glob"] }

[build-dependencies]
serde = "1.0.217"
toml = "0.8.19"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
