[package]
name = "ec2hx"
version = "1.3.0"
edition = "2021"
authors = ["Remo Senekowitsch <remo@buenzli.dev>"]
description = "convert EditorConfig to Helix configuration"
readme = "README.md"
repository = "https://github.com/senekor/ec2hx"
license = "Unlicense"
categories = ["command-line-utilities"]

# don't publish unnecessary files to crates.io
exclude = [".github", "test_data", "src/snapshots"]

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
directories = "6.0.0"
etcetera = "0.8.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = "1.0.217"
toml = "0.8.19"

[dev-dependencies]
insta = { version = "1.42.0", features = ["glob"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
